--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -1,6 +1,6 @@
 .header {
-  height: 56px;
-  margin-bottom: 120px;
+  height: 70px;
+  margin-bottom: 10px;
   background-color: var(--mantine-color-body);
   border-bottom: 1px solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
   padding-left: var(--mantine-spacing-md);
@@ -8,7 +8,7 @@
 }
 
 .inner {
-  height: 56px;
+  height: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -23,4 +23,13 @@
   color: light-dark(var(--mantine-color-gray-7), var(--mantine-color-dark-0));
   font-size: var(--mantine-font-size-sm);
   font-weight: 500;
+
+  @mixin hover {
+    background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-6));
+  }
+
+  [data-mantine-color-scheme] &[data-active] {
+    background-color: var(--mantine-color-blue-filled);
+    color: var(--mantine-color-white);
+  }
 }
