--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -28,10 +28,10 @@
 .links {
   display: flex;
   gap: 20px;
-  font-size: 18px;
   font-family: 'ppEditorialNew';
   font-variation-settings: 'wght' 200;
   color: #66ffcc;
+  text-decoration: none;
   text-transform: uppercase;
 
   @media (max-width: 768px) {
