--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -2,10 +2,7 @@
   border-top: 1px solid #4e4e4e;
   background-color: #101010;
   margin-top: auto;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-left: 40px;
-  padding-right: 40px;
+  padding: 20px 40px;
   box-shadow: 0 2px 5px rgba(255, 255, 255, 0.1);
 }
 
@@ -14,7 +11,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0;
-  font-family: 'ppEditorialNew';
+  font-family: var(--font-ppEditorialNew), sans-serif;
   font-variation-settings: 'wght' 200;
   color: #d0d0d0;
 
@@ -28,7 +25,7 @@
 .links {
   display: flex;
   gap: 20px;
-  font-family: 'ppEditorialNew';
+  font-family: var(--font-ppEditorialNew), sans-serif;
   font-variation-settings: 'wght' 200;
   color: #66ffcc;
   text-decoration: none;
@@ -41,7 +38,7 @@
 }
 
 .copyright {
-  font-family: 'ppEditorialNew';
+  font-family: var(--font-ppEditorialNew), sans-serif;
   font-variation-settings: 'wght' 200;
   font-size: 14px;
   color: #8b8b8b;
