--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -10,7 +10,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0;
-  font-family: var(--font-ppEditorialNew), sans-serif;
+  font-family: ppEditorialNew, sans-serif;
   font-variation-settings: 'wght' 200;
   color: #d0d0d0;
 
@@ -24,7 +24,7 @@
 .links {
   display: flex;
   gap: 20px;
-  font-family: var(--font-ppEditorialNew), sans-serif;
+  font-family: ppEditorialNew, sans-serif;
   font-variation-settings: 'wght' 200;
   text-decoration: none;
   text-transform: uppercase;
